--- a/docker-pacbio/Dockerfile
+++ b/docker-pacbio/Dockerfile
@@ -29,7 +29,8 @@ RUN apt-get install -y \
     libpng-dev \
     libssl-dev \
     libxml2-dev \
-    zip \
+    libbz2-dev \
+    liblzma-dev \
     libbz2-dev \
     libbz2-1.0 \
     libcurl4 \
@@ -80,8 +81,44 @@ RUN cd /tmp && \
     $CONDA_DIR/bin/conda config --system --set auto_update_conda false && \
     conda clean -tipsy
 
+RUN conda install -c bioconda tensorflow=2.7 numpy=1.20.0 biopython pandas pysam tqdm pybigwig
+
 RUN conda install -c bioconda extracthifi pbccs primrose pbmm2
 
 RUN ln -s $(which python3) /usr/local/bin/python
+
+##############
+#HTSlib 1.13#
+##############
+ENV HTSLIB_INSTALL_DIR=/opt/htslib
+
+WORKDIR /tmp
+RUN wget https://github.com/samtools/htslib/releases/download/1.13/htslib-1.13.tar.bz2 && \
+    tar --bzip2 -xvf htslib-1.13.tar.bz2 && \
+    cd /tmp/htslib-1.13 && \
+    ./configure  --enable-plugins --prefix=$HTSLIB_INSTALL_DIR && \
+    make && \
+    make install && \
+    cp $HTSLIB_INSTALL_DIR/lib/libhts.so* /usr/lib/ && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/tabix /usr/bin/tabix && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/bgzip /usr/bin/bgzip && \
+    rm -Rf /tmp/htslib-1.13
+
+################
+#Samtools 1.13#
+################
+ENV SAMTOOLS_INSTALL_DIR=/opt/samtools
+
+WORKDIR /tmp
+RUN wget https://github.com/samtools/samtools/releases/download/1.13/samtools-1.13.tar.bz2 && \
+    tar --bzip2 -xf samtools-1.13.tar.bz2 && \
+    cd /tmp/samtools-1.13 && \
+    ./configure --with-htslib=$HTSLIB_INSTALL_DIR --prefix=$SAMTOOLS_INSTALL_DIR && \
+    make && \
+    make install && \
+    ln -s /opt/samtools/bin/* /usr/local/bin/ && \
+    cd / && \
+    rm -rf /tmp/samtools-1.13
+
 
 ENV PATH=/usr/bin/:/bin/:/usr/local/bin/:/opt/bin/:/opt/conda/bin
