--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -14,8 +14,8 @@ jobs:
       - id: parse-string
         run:
           dirname=$(git diff-tree --no-commit-id -r ${{ github.sha }})
-          echo $dirname
-          container_name=${$dirname%/Dockerfile}
+          echo ${dirname}
+          container_name=${${dirname}%/Dockerfile}
           container_name=${container_name#*/}
           echo ::set-output name=container_name::"$container_name"
 
