--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -7,16 +7,27 @@ on:
 
 jobs:
   get-container-name:
-    runs-on: ubuntu-latest
-    outputs:
-      container_name: ${{ steps.parse-string.outputs.container_name }}
+    runs-on: ubuntu-latest  # windows-latest | macos-latest
+    name: Get container name
+    outputs: 
+      container_name: ${{ steps.container-name.outputs.container_name }}
     steps:
-      - id: parse-string
-        run:
-          dirname=$(git diff-tree --no-commit-id -r ${{ github.commits[0].sha }})
-          container_name=${dirname%/Dockerfile}
-          container_name=${container_name#*/}
-          echo ::set-output name=container_name::"$container_name"
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # OR "2" -> To retrieve the preceding commit.
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v23.1
+
+      - name: Get container name
+        id: container-name
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            container_name=${file%/Dockerfile}
+            container_name=${container_name#*/}
+            echo ::set-output name=container_name::"$container_name"
+          done
 
   push-docker-image:
     runs-on: ubuntu-latest
