--- a/docker-gassembly/Dockerfile
+++ b/docker-gassembly/Dockerfile
@@ -77,9 +77,12 @@ RUN apt-get update -y && apt-get install -y \
 
 WORKDIR /tmp
 
-RUN wget https://repo.anaconda.com/miniconda/Miniconda3-py39_4.12.0-Linux-x86_64.sh && \
-    bash Miniconda3-py39_4.12.0-Linux-x86_64.sh
-    
+ENV CONDA_DIR /opt/conda
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda.sh && \
+    /bin/bash ~/miniconda.sh -b -p /opt/conda
+
+ENV PATH=$CONDA_DIR/bin:$PATH
+
 RUN conda install -c bioconda graphaligner
 
 ##############
