--- a/docker-mosdepth/Dockerfile
+++ b/docker-mosdepth/Dockerfile
@@ -3,6 +3,8 @@ MAINTAINER David Spencer <dspencer@wustl.edu>
 
 LABEL Basic image with conda and mosdepth
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update && apt-get install -y --no-install-recommends locales && \
     echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
     locale-gen en_US.UTF-8 && \
@@ -17,6 +19,13 @@ RUN apt-get update -y && apt-get install -y --no-install-recommends \
     curl \
     wget \
     tzdata 
+
+#set timezone to CDT
+RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
+#LSF: Java bug that need to change the /etc/timezone.
+#     The above /etc/localtime is not enough.
+RUN echo "America/Chicago" > /etc/timezone
+RUN dpkg-reconfigure --frontend noninteractive tzdata
 
 # needed for MGI data mounts
 RUN apt-get update && apt-get install -y libnss-sss gawk openssh-client grep evince && apt-get clean all
@@ -36,9 +45,3 @@ RUN rm -f Miniconda3-latest-Linux-x86_64.sh  && \
 RUN conda update -n base -c defaults conda && \
     conda install -c bioconda mosdepth
 
-#set timezone to CDT
-RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
-#LSF: Java bug that need to change the /etc/timezone.
-#     The above /etc/localtime is not enough.
-RUN echo "America/Chicago" > /etc/timezone
-RUN dpkg-reconfigure --frontend noninteractive tzdata
