--- a/docker-longread/Dockerfile
+++ b/docker-longread/Dockerfile
@@ -154,4 +154,4 @@ ENV PATH=$CONDA_DIR/bin:$PATH
 
 RUN conda init bash
 
-RUN mamba create -n modbam2bed -c bioconda -c conda-forge -c epi2melabs modbam2bed
+RUN mamba create -n modbam2bed -c bioconda -c conda-forge -c epi2melabs modbam2bed && mamba clean --all
