added liftoff to gassembly

--- a/docker-gassembly/Dockerfile
+++ b/docker-gassembly/Dockerfile
@@ -164,4 +164,5 @@ RUN pip3 install whatshap
 ENV PATH="/usr/local/bin:${PATH}"
 
 RUN pip install statsmodels && \
-    pip install modbamtools
+    pip install modbamtools && \
+    pip install Liftoff
