--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -141,3 +141,5 @@ RUN mkdir -p /tmp/ucsc && \
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && ./aws/install
+
+RUN apt-get install -y --no-install-recommends groff
